<resources>
    <string name="app_name">Slim Launcher</string>
    <string name="slim_url">http://sduduzog.github.io/slim-launcher/</string>
    <string name="main_placeholder_clock">00:00</string>
    <string name="main_placeholder_date">Date</string>

    <string-array name="themes_array">
        <item>Default</item>
        <item>Midnight</item>
        <item>Jupiter</item>
        <item>Teal</item>
        <item>Candy</item>
        <item>Pastel</item>
    </string-array>

    <string-array name="time_format_array">
        <item>24 Hour</item>
        <item>12 Hour</item>
    </string-array>

    <plurals name="slots_plurals">
        <item quantity="zero">%d slots left</item>
        <item quantity="one">%d slot left</item>
        <item quantity="few">%d slots left</item>
        <item quantity="two">%d slots left</item>
        <item quantity="other">%d slots left</item>
    </plurals>

    <string name="prefs_settings">settings</string>
    <string name="prefs_settings_key_theme">key_theme</string>
    <string name="prefs_settings_key_time_format">clock_type</string>
    <string name="prefs_settings_key_toggle_status_bar">hide_status_bar</string>
    <!--main package strings-->
    <string name="note_fragment_hint_title">Title</string>
    <string name="note_fragment_hint_body">Start here</string>
    <!--settings package strings-->
    <string name="setup_button_start">start</string>
    <string name="no_app_selected_toast_msg">Choose at least one app</string>
    <string name="choose_apps_title">Choose Apps</string>
    <string name="choose_time_format_dialog_title">Choose Time Format</string>
    <!-- Content Description For Image Resources-->
    <string name="main_fragment_options">Options</string>
    <string name="options_fragment_about_slim">About Slim</string>
    <string name="options_fragment_device_settings">Device Settings</string>
    <string name="options_fragment_change_theme">Change Theme</string>
    <string name="options_fragment_choose_time_format">Choose Time Format</string>
    <string name="options_fragment_customise_apps">Customise Apps</string>
    <string name="options_fragment_toggle_status_bar">Toggle Status Bar</string>
    <string name="main_fragment_notes">Notes</string>
    <string name="customise_apps_fragment_add">Add</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remove">Remove</string>
    <string name="choose_theme_dialog_title">Choose Theme</string>
    <string name="home_fragment_tasks">Tasks</string>
    <string name="notes_fragment_create_new_note">Create new</string>
    <string name="add_apps_fragment_search_apps">Search apps</string>
    <string name="tasks_fragment_list_item_complete">&lt;strike>%s&lt;/strike></string>
    <string name="tasks_fragment_sort">Sort</string>
    <string name="tasks_fragment_clear_completed_tasks">Clear completed tasks</string>
    <string name="tasks_fragment_enter_a_new_task">Enter a new task</string>

    <string name="test_string">"About Codeo
Why do we do what we do?
We love learning and solving challenging problems in an innovative way. We love that technology lets small teams solve big problems.
We want to leverage what we love and what we are good at to make a positive impact on the way people live and work.
Our Vision
Our vision is to create an environment where world class people master their craft while creating remarkable products that change the world.
Our Values
To be effective together, we align around a shared set of values:
Be Excellent We invest care in our work and hone our skills, because how you do anything reflects how you do everything.
Value Human Experience We care deeply about how people experience our work, whether they are customers, suppliers or coworkers.
Innovate We constantly push boundaries, moving forward by seeking change and challenging old ideas.
Be Strategic We think big-picture and long-term so that our work can have the greatest impact.
Take Ownership We take ownership of challenges. We\'re responsible. We don\'t pass the buck. Be Genuine We are genuine people.
We are honest, authentic &amp; trustworthy. 
In pursuing this vision together, adhering to these values, we believe that we will fulfill our purpose and make a significant contribution to the world. 
More about our Core Values
Be Excellent - We invest care in our work and hone our skills, because how you do anything reflects how you do everything.
We care deeply about the work we do, no matter its form. We believe that how one does anything is a reflection of how one does everything.
We enjoy the process and believe one can be creative in even the most simplest of tasks.
We care about  detail and believe that this attention reflects the respect we have for others.
We want to be proud of each deliverable, no matter what it is.
Value Human Experience We care deeply about how people experience our work, whether they are customers, suppliers or coworkers.
It\'s not all about the code. We care deeply about the presentation of our work and the human experience.
We also care about the internals, and value the perspective that other engineers\/designers would have if they reviewed our work.
We believe in a solid balance of engineering, user experience and the presentation of our work.
We do not deliver anything that isn\'t underpinned with an investment in these three areas. This is what makes us unique.
Innovate We constantly push boundaries because we love learning and transforming ideas into reality.
We evolve through innovation. We value ideation and innovation and the impact it has on the evolution of our work.
Innovation means a better way of doing something. Innovation means an opportunity to do something differently.
Innovation means we are learning. We are constantly evolving through innovation. It's not something we do sometimes. 
Be Strategic We think big-picture and long-term so that our work can have the greatest impact
We believe in always thinking long term and about solving the right problems.
We invest in ideas, people, processes and tools that deal with challenges in a sustainable way.
We ask Why? before What? or How? because we want to invest in things that align with our values and purpose. 
Take Ownership We take ownership of challenges. We're responsible. We don't pass the buck.
We demonstrate ownership in everything we do. We take the initiative and don't wait for others to act.
We care about the outcomes and take the lead, particularly when dealing with the results of our own actions.
Taking ownership demonstrates to others that they can trust us to do the right thing.
Because of this, outsiders describe us as responsible or trustworthy.
Be Genuine We are genuine people. We are honest, authentic &amp; trustworthy. 
We are genuine. We don't pretend to be something we are not. We demonstrate that we are genuine through our actions.
We actively listen to others. We are honest. We are sincere. We care. When we express gratitude, it is genuine.
When we present critiques, we do so in a positive manner.
Other things we care deeply about:
Efficacy We hone our skills and optimize our tools to make the best use of the time we have.
Being effective means more time can be invested in being creative. You cannot scale creativity or be effective at it.
Because of this, we are ruthless at driving efficiency and automating the rote so we can spend more time on the problems that really challenge us."
</string>
    <string name="edit_note_fragment_save">SAVE</string>
    <string name="edit_note_fragment_untitled">Untitled</string>
    <string name="note_fragment_edit">EDIT</string>
    <string name="nav_key_note">note</string>

</resources>
