<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/note_item_background"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/item_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/note_fragment_hint_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/item_note_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:padding="4dp"
        android:text="@string/note_fragment_hint_body" />

    <TextView
        android:id="@+id/item_note_edited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:padding="4dp"
        android:text="@string/main_placeholder_clock"
        android:textSize="12sp" />
</LinearLayout>