<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_fragment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="-1"
        android:text="@string/main_placeholder_clock"
        android:textSize="@dimen/_40ssp"
        app:layout_constraintBottom_toTopOf="@+id/home_fragment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_fragment_time_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="-1"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@+id/home_fragment_time"
        app:layout_constraintTop_toTopOf="@+id/home_fragment_time" />

    <TextView
        android:id="@+id/home_fragment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="-1"
        android:padding="4dp"
        android:text="@string/main_placeholder_date"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_fragment_time"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_time" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/home_fragment_list_exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_date"
        app:layout_constraintVertical_chainStyle="packed"
        tools:itemCount="4"
        tools:listitem="@layout/main_fragment_list_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list_exp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_list"
        tools:itemCount="3"
        tools:listitem="@layout/main_fragment_list_item" />

    <TextView
        android:id="@+id/home_fragment_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/main_fragment_options"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_list_exp" />

    <TextView
        android:id="@+id/home_fragment_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/main_fragment_notes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_fragment_list_exp" />

    <ImageView
        android:id="@+id/home_fragment_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:alpha="-1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_call"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/home_fragment_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:alpha="-1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_photo_camera"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>